compiler/testData/diagnostics/tests/imports/ImportsHiddenByDefinitionInTheSameFile.kt
import kotlin.Double
import <!USELESS_HIDDEN_IMPORT!>kotlin.List<!>

class List {}
